[metadata]
name = lcm
description = This package aims to generalize and facilitate the specification, solving, and estimation of dynamic choice models.
long_description = file: README.rst
long_description_content_type = text/x-rst
# url = https://pytask-dev.readthedocs.io/en/latest
author = Janos Gabler, Hans-Martin von Gaudecker, Sebastian Gsell, Moritz Mendel, Christian Zimpelmann
author_email = zimpelmann@iza.org
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
project_urls =
    # Changelog = https://pytask-dev.readthedocs.io/en/latest/changes.html
    # Documentation = https://pytask-dev.readthedocs.io/en/latest
    Github = https://github.com/iza-institute-of-labor-economics/lcm
    # Tracker = https://github.com/pytask-dev/pytask/issues

[options]
packages = find:
install_requires =
    estimagic
python_requires = >=3.6.1
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lcm=_lcm.cli:cli
