[metadata]
name = lcm
description = This package aims to generalize and facilitate the specification, solving, and estimation of dynamic choice models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opensourceeconomics/lcm
author = Janos Gabler, Tim Mensinger, Hans-Martin von Gaudecker
author_email = hmgaudecker@uni-bonn.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
keywords =
    economics
    econometrics
    statistics
    estimation
    life cycle models
    dynamic programming

[options]
packages = find:
install_requires =
    dags
    jax>=0.4.10
    jaxlib>=0.4.10
    numpy
    pandas
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/lcm/_version.py
